--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 license = {text = "MIT"}
 
 [project.scripts]
-aiops = "aiops_cli:app"
+aiops = "cli:app"
 
 [tool.poetry.dependencies]
 python = "^3.9"
