--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -1,4 +1,3 @@
-### `pyproject.toml`
 [project]
 name = "aiops-agent"
 version = "0.1.0"
@@ -7,14 +6,15 @@ authors = [{name = "Your Name"}]
 readme = "README.md"
 license = {text = "MIT"}
 
-[project.scripts]
-aiops = "cli:app"
+dependencies = [
+    "typer>=0.12.3",
+    "PyYAML>=6.0.2",
+    "openai>=1.40.0"
+]
 
-[tool.poetry.dependencies]
-python = "^3.9"
-typer = "^0.12.3"
-pyyaml = "^6.0.2"
-openai = "^1.40.0"
+[project.scripts]
+aiops = "aiops.cli:app"
 
 [build-system]
-requires = ["setuptools", "wheel"]
+requires = ["setuptools>=61.0", "wheel"]
+build-backend = "setuptools.build_meta"
