--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,12 @@ dependencies = [
     "openai>=1.40.0",
     "rich>=13.0.0",      # 👈 optional: for better output
     "python-dotenv>=1.1.0",
-    "python-frontmatter>=1.1.0"
+    "python-frontmatter>=1.1.0",
+    "beautifulsoup4>=4.13.5",
+    "faiss-cpu>=1.12.0",
+    "sentence-transformers>=5.1.0",
+    "duckduckgo-search>=8.1.1",
+    "fastmcp>=2.12.2"
 ]
 
 [project.scripts]
